Prevent wrapping of date

--- a/_sass/site.scss
+++ b/_sass/site.scss
@@ -166,6 +166,7 @@ img.preview {
     -webkit-flex: 1;
     -moz-flex: 1;
     text-align: right;
+    white-space: nowrap;
 }
 .title {
 	font-size: 0.9em;
